[gd_scene load_steps=3 format=3 uid="uid://bgpkp2e2f2ygt"]

[ext_resource type="Script" uid="uid://de0xy6jlwwwky" path="res://scripts/resultscreen/main/result_screen.gd" id="1_5lamp"]
[ext_resource type="Script" uid="uid://dyogb42kb50w2" path="res://scripts/resultscreen/utilities/question_list.gd" id="2_emclk"]

[node name="ResultScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lamp")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -548.0
offset_right = 109.5
offset_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "THE RESULT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightWrong" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -456.0
offset_right = 119.0
offset_bottom = -422.0
grow_horizontal = 2
grow_vertical = 2
text = "Right: 0 || Wrong: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -399.0
offset_right = 119.0
offset_bottom = -350.0
grow_horizontal = 2
grow_vertical = 2
text = "Score
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestTime" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -330.0
offset_right = 119.0
offset_bottom = -281.0
grow_horizontal = 2
grow_vertical = 2
text = "Your time: 00:00:00
Best time: 00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grade" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -267.0
offset_right = 119.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "A+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionList" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.5
offset_top = -145.0
offset_right = 313.5
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("2_emclk")

[node name="VBox" type="VBoxContainer" parent="QuestionList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Comment" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = 161.0
offset_right = 145.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
text = "..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Retry" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = 287.0
offset_right = 107.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry"

[node name="BackToMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = 357.5
offset_right = 107.0
offset_bottom = 396.5
grow_horizontal = 2
grow_vertical = 2
text = "Back to Menu"
